Add drag & drop, delete and image upload system for hotel management